# learning-cmake

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  learning-cmake.cbp
hello-world/: CMakeLists.txt  Makefile  cmake_install.cmake  hello-world-exe  hello-world-exe.cbp  hello-world.cbp
hello-world-clear/: Makefile  cmake_install.cmake  hello.cbp
hello-world-clear/src/: CMakeLists.txt  Makefile  cmake_install.cmake
hello-world-lib/: Makefile  cmake_install.cmake  hellolib.cbp
hello-world-lib/src/: Makefile  cmake_install.cmake  hello.c
hello-world-shared/: Makefile  cmake_install.cmake  newhello.cbp
hello-world-shared/include/hello/: hello.h
hello-world-shared/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
